# dotfile

./: .Xresources  .bashrc  .gitignore  .vimrc  .xinitrc  Xresources  autocommit.sh  formatlab.csv  i3config  linkup.sh  polybar.config  stow.sh  timeloglist.txt  timelogprocess.sh
.cfggen/: runall.sh
.cfggen/bashrc/: gen.sh  global
.cfggen/i3/: gen.sh  global  lasse-x570
.cfggen/polybar/: gen.sh  lasg-X570-AORUS-ELITE  lasg-XPS-15-9550
.cfggen/xresources/: gen.sh  lasg-XPS-15-9550  lasse-x570
.config/hooks/: post-merge
.config/i3/: config  global  lasse-pc  lasse-x570
.config/nvim/: .netrwhist  init.vim
.config/polybar/: config  gen.sh  global  lasse-pc  manj-xps  xps-manj
.config/zathura/: zathurarc
.screenlayouts/: hjemme.sh  mirror.sh
.vim/: .netrwhist
.vim/colors/: spacecamp.vim
.vim/myUltiSnips/: tex.snippets
.vim/spell/: en.utf-8.add  en.utf-8.add.spl
dotssh/: id_rsa.pub  known_hosts.old  ssh
screenlayouts/: for.sh  hjemme2.sh  hjemme3.sh  screenlayouts  tmp.sh
scripts/: borg.sh  displayselect.sh  dotfileWatcher.sh  dotfilerepostatus.sh  getfilesFromBlackboard.sh  lockscreenoff.sh  polybar.sh  polybar_all.sh  screenshot.sh  shutdownLaptop.sh  startup.sh  stockimglock.sh  timelog.sh  wallpaper.sh
scripts/compile/: CMakeLists.txt
scripts/config/: lasse-pc
scripts/configGeneration/: gen.sh  global
scripts/rofi/: terminalFolder.sh  vimsession.sh
stow/: .bashrc  .vimrc
stow/.config/i3/: config
stow/.screenlayouts/: extendright.sh  laptop.sh
timelog/: untitled.fig  untitled.m
vim/: vimrc
vim/dotvim/: .netrwhist  vim
(+16 files in other folders)
